--- a/admin2.html
+++ b/admin2.html
@@ -3,11 +3,134 @@
 <head>
   <meta charset="UTF-8" />
   <title>QRコード生成と印刷</title>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 
+  
   <style>
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #2c3e50;
+      overflow-x: hidden;
+    }
+
+    header {
+      background-color: #2c3e50;
+      color: white;
+      position: relative;
+      margin-bottom: 0;
+      padding-bottom: 0; 
+    }
+
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+    }
+
+    .header-title {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+
+    .header-links {
+      display: flex;
+      gap: 20px;
+    }
+
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .header-links a:hover {
+      text-decoration: underline;
+    }
+
+    .full-width-section {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+
+  background: #e0f7da;
+  padding: 60px 0;
+  text-align: center;
+  margin-top: 0 !important; 
+}
+
+    /* ハンバーガーメニュー */
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    .menu-button span {
+      display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
+      color: white;
+      transition: 0.3s;
+      z-index: 1000;
+      padding-top: 60px;
+    }
+
+    .drawer.open {
+      left: 0;
+    }
+
+    .drawer a {
+      display: block;
+      padding: 15px 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
+    }
+
+    .drawer a:hover {
+      background-color: #2c3e50;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
+
     #printArea {
       width: 58mm;
       text-align: center;
@@ -28,22 +151,9 @@
       #printArea, #printArea * {
         visibility: visible;
       }
-      body {
-        margin: 0;
-      }
-    }
-  </style>
-</head>
-<body>
-  <h2>QRコード生成（ワンタイム）</h2>
-  <label>テーブル番号: <input type="number" id="tableNum" min="1" max="9"></label>
-  <button onclick="generateQR()">生成</button>
-  <button onclick="window.print()">印刷する</button>
 
-  <div id="printArea">
-    <p id="tableLabel">テーブル番号：</p>
-    <canvas id="qrcode"></canvas>
-  </div>
+
+  </style>
 
   <script>
     const firebaseConfig = {
@@ -54,10 +164,17 @@
       messagingSenderId: "304250341939",
       appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
+
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    async function generateQR() {
+    function updateTableDisplays() {
+   }
+
+    function countVisitors(snapshot) {
+      updateTableDisplays();
+    }
+        async function generateQR() {
       const table = document.getElementById("tableNum").value;
       if (!table || isNaN(table)) {
         alert("テーブル番号を入力してください");
@@ -76,42 +193,6 @@
 
       const url = `https://qr-webpage.vercel.app/enter2.html?table=${table}&token=${token}`;
       document.getElementById("tableLabel").textContent = `テーブル番号：${table}`;
-        const qrContainer = document.getElementById("qrcode");
-  qrContainer.innerHTML = "";
-
-  const qrCode = new QRCodeStyling({
-    width: 200,
-    height: 200,
-    type: "canvas",
-    data: url,
-    image: "https://cdn-icons-png.flaticon.com/512/60/60525.png", // 中央ロゴ（紙飛行機などに変更可）
-    dotsOptions: {
-      color: "#00c97b",
-      type: "rounded"
-    },
-    cornersSquareOptions: {
-      color: "#00c97b",
-      type: "extra-rounded"
-    },
-    backgroundOptions: {
-      color: "transparent"
-    },
-    imageOptions: {
-      crossOrigin: "anonymous",
-      margin: 4
-    },
-    gradient: {
-      type: "linear",
-      rotation: 90,
-      colorStops: [
-        { offset: 0, color: "#00f5a0" },
-        { offset: 1, color: "#00d9f5" }
-      ]
-    }
-  });
-
-  qrCode.append(qrContainer);
-}
       QRCode.toCanvas(document.getElementById("qrcode"), url, function (error) {
         if (error) {
           console.error(error);
@@ -119,6 +200,55 @@
         }
       });
     }
+
+    window.onload = () => {
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
   </script>
+</head>
+<body>
+
+  <header>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="header-bar">
+      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="start.html">ログアウト</a>
+      </div>
+    </div>
+    <div class="drawer">
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </div>
+  </header>
+
+  <main>
+      <h2>QRコード生成（ワンタイム）</h2>
+  <label>テーブル番号: <input type="number" id="tableNum" min="1" max="9"></label>
+  <button onclick="generateQR()">生成</button>
+  <button onclick="window.print()">印刷する</button>
+
+  <div id="printArea">
+    <p id="tableLabel">テーブル番号：</p>
+    <canvas id="qrcode"></canvas>
+  </div>
+
+    
+  </main>
+
 </body>
 </html>
