Update and rename admin.html to app/system/admin.html

--- a/app/system/admin.html
+++ b/app/system/admin.html
@@ -149,7 +149,7 @@
       </div>
     </div>
     <div class="drawer">
-      <a href="index.html">ホーム</a>
+      <a href="dashboard.html">ホーム</a>
       <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">順番待ち管理</a>
