--- a/QR/qrcode.html
+++ b/QR/qrcode.html
@@ -175,7 +175,7 @@
       </div>
     </div>
     <div class="drawer">
-      <a href="dashboard.html">ホーム</a>
+      <a href="/app/system/dashboard.html">ホーム</a>
       <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">待ち管理</a>
@@ -188,7 +188,7 @@
 
 <h2>QRコード一覧</h2>
 <div style="display: flex; gap: 80px;">
-  <iframe src="QR/enterQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+  <iframe src="enterQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
   <iframe src="exitQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
   <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
   <iframe src="welcome.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
