--- a/QR/qrcode.html
+++ b/QR/qrcode.html
@@ -176,9 +176,9 @@
     </div>
     <div class="drawer">
       <a href="/app/system/dashboard.html">ホーム</a>
-      <a href="table.html">テーブル管理</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
+      <a href="/app/system/table.html">テーブル管理</a>
+      <a href="/app/system/histogram.html">混雑状況可視化</a>
+      <a href="/app/system/admin.html">待ち管理</a>
       <a href="qrcode.html">QRコード一覧</a>
 
     </div>
