--- a/app/system/generate.html
+++ b/app/system/generate.html
@@ -230,9 +230,13 @@
     </div>
     <div class="drawer">
       <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
+      <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
+      <a href="admin.html">順番待ち管理</a>
+      <a href="/QR/qrcode.html">QRコード一覧</a>
+      <a href="admin.html">QRコード生成</a>
+
+
     </div>
   </header>
 
