--- a/app/system/generate.html
+++ b/app/system/generate.html
@@ -229,12 +229,12 @@
       </div>
     </div>
     <div class="drawer">
-      <a href="index.html">ホーム</a>
+      <a href="dashboard.html">ホーム</a>
       <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">順番待ち管理</a>
       <a href="/QR/qrcode.html">QRコード一覧</a>
-      <a href="admin.html">QRコード生成</a>
+      <a href="generate.html">QRコード生成</a>
 
 
     </div>
