--- a/app/system/dashboard.html
+++ b/app/system/dashboard.html
@@ -270,6 +270,7 @@
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">順番待ち管理</a>
       <a href="/QR/qrcode.html">QRコード一覧</a>
+      <a href="generate.html">QRコード生成</a>
       <a href="admin.html">アンケート管理</a>
     </div>
   </header>
