--- a/app/system/table.html
+++ b/app/system/table.html
@@ -176,6 +176,8 @@
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">順番待ち管理</a>
       <a href="/QR/qrcode.html">QRコード一覧</a>
+      <a href="generate.html">QRコード生成</a>
+
 
     </div>
   </header>
