--- a/practice.html
+++ b/practice.html
@@ -2,161 +2,161 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>QRコード生成と印刷</title>
+  <title>入店記録</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-
-  
   <style>
     body {
-      font-family: 'Helvetica Neue', sans-serif;
       margin: 0;
       padding: 0;
+      font-family: 'Helvetica Neue', sans-serif;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      color: #2c3e50;
-      overflow-x: hidden;
+      color: #333;
+      overflow: hidden;
     }
 
-    header {
-      background-color: #2c3e50;
-      color: white;
-      position: relative;
-      margin-bottom: 0;
-      padding-bottom: 0; 
-    }
-
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
-    }
-
-    .header-title {
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-
-    .header-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-
-    .full-width-section {
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-
-  background: #e0f7da;
-  padding: 60px 0;
-  text-align: center;
-  margin-top: 0 !important; 
-}
-
-    /* ハンバーガーメニュー */
-    .menu-button {
-      position: absolute;
-      left: 20px;
-      top: 12px;
-      width: 30px;
-      height: 24px;
-      cursor: pointer;
-      z-index: 1001;
-    }
-
-    .menu-button span {
-      display: block;
-      height: 4px;
-      background: white;
-      margin: 5px 0;
-      transition: 0.4s;
-    }
-
-    .drawer {
+    .loader {
       position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #34495e;
-      color: white;
-      transition: 0.3s;
-      z-index: 1000;
-      padding-top: 60px;
-    }
-
-    .drawer.open {
-      left: 0;
-    }
-
-    .drawer a {
-      display: block;
-      padding: 15px 20px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      border-bottom: 1px solid #2c3e50;
-    }
-
-    .drawer a:hover {
-      background-color: #2c3e50;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 30px 20px;
-    }
-
-    h2 {
-      margin-top: 40px;
-      margin-bottom: 10px;
-      border-bottom: 2px solid #2c3e50;
-      padding-bottom: 5px;
-    }
-
-    #printArea {
-      width: 58mm;
-      text-align: center;
-      font-family: sans-serif;
-      margin: auto;
-      padding: 5mm;
-      border: 1px dashed #ccc;
-    }
-    #printArea canvas {
       width: 100%;
-      height: auto;
+      height: 100%;
+      background-color: #fff;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
 
-    @media print {
-      body * {
-        visibility: hidden;
-      }
-      #printArea, #printArea * {
-        visibility: visible;
-      }
+    .loading-wrapper {
+      position: relative;
+      width: 220px;
+      margin-bottom: 20px;
+    }
 
+    .loading-bar {
+      width: 100%;
+      height: 20px;
+      border: 2px solid #999;
+      border-radius: 10px;
+      overflow: hidden;
+    }
 
+    .loading-fill {
+      height: 100%;
+      width: 0%;
+      background-color: #7baaf7;
+      animation: loading-animation 3s forwards;
+    }
+
+    @keyframes loading-animation {
+      0% { width: 0%; }
+      100% { width: 100%; }
+    }
+
+    .loading-text {
+      position: absolute;
+      top: -24px;
+      right: 0;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .welcome-img {
+      display: none;
+      width: 140px;
+      height: auto;
+      margin-bottom: 10px;
+      animation: fade-slide 1s ease-in-out;
+    }
+
+    .loader .txt {
+      font-size: 28px;
+      font-weight: bold;
+      color: #2c3e50;
+      display: none;
+      animation: fade-slide 1s ease-in-out;
+    }
+
+    @keyframes fade-slide {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    .main-content {
+      display: none;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      position: relative;
+    }
+
+    .container {
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      animation: fade-zoom-in 0.8s ease-in-out;
+    }
+
+    .icon {
+      font-size: 64px;
+      margin-bottom: 20px;
+      animation: bounce 1.5s infinite ease-in-out;
+    }
+
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+    }
+
+    @keyframes fade-zoom-in {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
   </style>
+</head>
+<body>
 
+  <!-- ローディング -->
+  <div class="loader" id="loader03">
+    <div class="loading-wrapper" id="loadingWrapper">
+      <div class="loading-text" id="loadingLabel">Now Loading...</div>
+      <div class="loading-bar">
+        <div class="loading-fill"></div>
+      </div>
+    </div>
+    <img src="welcome.png" alt="店員" class="welcome-img" id="welcomeImg" />
+    <p class="txt" id="welcomeText">いらっしゃいませ！<br>　　Welcome!</p>
+  </div>
+
+  <!-- メイン -->
+  <div class="main-content" id="main-content">
+    <div class="container">
+      <div class="icon">🛍️</div>
+      <h1>ご来店ありがとうございます！</h1>
+      <p>入店が記録されました。</p>
+      <p>Thank you for visiting our store!</p>
+      <p>Your entry has been recorded.</p>
+    </div>
+  </div>
+
+  <!-- アニメーション制御 -->
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
@@ -166,123 +166,67 @@
       messagingSenderId: "304250341939",
       appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
-
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    function updateTableDisplays() {
-   }
+    async function processEntry() {
+      const params = new URLSearchParams(location.search);
+      const table = params.get("table");
+      const token = params.get("token");
+      if (!token || !table) return location.href = "expired2.html";
 
-    function countVisitors(snapshot) {
-      updateTableDisplays();
+      try {
+        const docRef = db.collection("qr_tokens").doc(token);
+        const doc = await docRef.get();
+        if (!doc.exists) return location.href = "expired2.html";
+
+        const data = doc.data();
+        const now = new Date();
+        const expires = new Date(data.expiresAt);
+
+        if (data.used) {
+          location.href = "already-enter2.html";
+        } else if (expires < now || data.table !== table) {
+          location.href = "expired2.html";
+        } else {
+          await docRef.update({ used: true });
+          await db.collection("logs").add({
+            table: table,
+            type: "enter",
+            device: navigator.userAgent,
+            timestamp: new Date().toISOString()
+          });
+
+          // ローディング表示開始
+          $(document).ready(function () {
+            setTimeout(() => {
+              $('#loadingLabel').text("Completion!");
+            }, 3100);
+
+            setTimeout(() => {
+              $('#loadingWrapper').fadeOut(400);
+            }, 3600);
+
+            setTimeout(() => {
+              $('#welcomeImg').fadeIn(600);
+              $('#welcomeText').fadeIn(600);
+            }, 4200);
+
+            setTimeout(() => {
+              $('#loader03').fadeOut(600, function () {
+                $('#main-content').fadeIn(600);
+              });
+            }, 6000);
+          });
+        }
+      } catch (e) {
+        console.error("Error processing QR:", e);
+        location.href = "expired2.html";
+      }
     }
-    async function generateQR() {
-  const table = document.getElementById("tableNum").value;
-  if (!table || isNaN(table)) {
-    alert("テーブル番号を入力してください");
-    return;
-  }
 
-  const token = crypto.randomUUID();
-  const expiresAt = new Date(Date.now() + 2 * 60 * 1000); // 2分後
-
-  await db.collection("qr_tokens").doc(token).set({
-    table: table,
-    token: token,
-    expiresAt: expiresAt.toISOString(),
-    used: false
-  });
-
-  const url = `https://qr-webpage.vercel.app/enter2.html?table=${table}&token=${token}`;
-  document.getElementById("tableLabel").textContent = `テーブル番号：${table}`;
-
-  // QRコード描画クリア
-  const qrContainer = document.getElementById("qrcode");
-  qrContainer.innerHTML = "";
-
-  const qrCode = new QRCodeStyling({
-    width: 200,
-    height: 200,
-    type: "canvas",
-    data: url,
-    image: "https://cdn-icons-png.flaticon.com/512/60/60525.png", // 中央ロゴ（紙飛行機などに変更可）
-    dotsOptions: {
-      color: "#00c97b",
-      type: "rounded"
-    },
-    cornersSquareOptions: {
-      color: "#00c97b",
-      type: "extra-rounded"
-    },
-    backgroundOptions: {
-      color: "transparent"
-    },
-    imageOptions: {
-      crossOrigin: "anonymous",
-      margin: 4
-    },
-    gradient: {
-      type: "linear",
-      rotation: 90,
-      colorStops: [
-        { offset: 0, color: "#00f5a0" },
-        { offset: 1, color: "#00d9f5" }
-      ]
-    }
-  });
-
-  qrCode.append(qrContainer);
-}
-
-
-    window.onload = () => {
-      db.collection("logs").onSnapshot(countVisitors);
-      setInterval(updateTableDisplays, 60000);
-
-      const menuButton = document.querySelector(".menu-button");
-      const drawer = document.querySelector(".drawer");
-      menuButton.addEventListener("click", () => {
-        drawer.classList.toggle("open");
-      });
-    };
+    window.onload = processEntry;
   </script>
-</head>
-<body>
-
-  <header>
-    <div class="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="start.html">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
-    </div>
-  </header>
-
-  <main>
-      <h2>QRコード生成（ワンタイム）</h2>
-  <label>テーブル番号: <input type="number" id="tableNum" min="1" max="9"></label>
-  <button onclick="generateQR()">生成</button>
-  <button onclick="window.print()">印刷する</button>
-
-  <div id="printArea">
-    <p id="tableLabel">テーブル番号：</p>
-    <canvas id="qrcode"></canvas>
-  </div>
-
-    
-  </main>
 
 </body>
 </html>
