--- a/enter2.html
+++ b/enter2.html
@@ -185,7 +185,7 @@
         const expires = new Date(data.expiresAt);
 
         if (data.used) {
-          location.href = "already-enter2.html";
+          location.href = "already-enter.html";
         } else if (expires < now || data.table !== table) {
           location.href = "expired2.html";
         } else {
