--- a/error.html
+++ b/error.html
@@ -1,1 +1,139 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <title>使用中</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Helvetica Neue', sans-serif;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #333;
+      overflow: hidden;
+    }
+
+    .loader {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .loading-wrapper {
+      position: relative;
+      width: 220px;
+      margin-bottom: 20px;
+    }
+
+    .loading-bar {
+      width: 100%;
+      height: 20px;
+      border: 2px solid #999;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .loading-fill {
+      height: 100%;
+      width: 0%;
+      background-color: #7baaf7;
+      animation: loading-animation 3s forwards;
+    }
+
+    @keyframes loading-animation {
+      0% { width: 0%; }
+      100% { width: 100%; }
+    }
+
+    .loading-text {
+      position: absolute;
+      top: -24px;
+      right: 0;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .main-content {
+      display: none;
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+    }
+
+    .message {
+      font-size: 24px;
+      font-weight: bold;
+      text-align: center;
+      color: #2c3e50;
+      animation: fade-in 1s ease-in-out;
+    }
+
+    .message small {
+      display: block;
+      margin-top: 10px;
+      font-size: 16px;
+      color: #555;
+    }
+
+    @keyframes fade-in {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- 🔄 ローディング画面 -->
+  <div class="loader" id="loader03">
+    <div class="loading-wrapper" id="loadingWrapper">
+      <div class="loading-text" id="loadingLabel">Now Loading...</div>
+      <div class="loading-bar">
+        <div class="loading-fill"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ✅ メイン表示 -->
+  <div class="main-content" id="main-content">
+    <div class="message">
+      エラーが発生しました。店員を呼んでください。
+      <small>An error has occurred. Please call the store attendant.</small>
+    </div>
+  </div>
+
+  <!-- jQuery アニメーション制御 -->
+  <script>
+    $(document).ready(function () {
+      setTimeout(() => {
+        $('#loadingLabel').text("Completion!");
+      }, 3100);
+
+      setTimeout(() => {
+        $('#loadingWrapper').fadeOut(400);
+      }, 3600);
+
+      setTimeout(() => {
+        $('#loader03').fadeOut(600, function () {
+          $('#main-content').fadeIn(600);
+        });
+      }, 4800);
+    });
+  </script>
+
+</body>
+</html>
