--- a/error.html
+++ b/error.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Helvetica Neue', sans-serif;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      background: linear-gradient(to right, #fbd3e9, #bb377d);
       color: #333;
       overflow: hidden;
     }
