--- a/enter.html
+++ b/enter.html
@@ -5,68 +5,10 @@
   <title>入店記録</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import {
-      getFirestore, collection, addDoc, query, where, getDocs
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    window.addEventListener("load", async () => {
-      const params = new URLSearchParams(window.location.search);
-      const table = params.get("table") || "unknown";
-      const timestamp = new Date().toISOString();
-      const device = navigator.userAgent;
-
-      try {
-        const logsRef = collection(db, "logs");
-        const q = query(logsRef, where("table", "==", table));
-        const snapshot = await getDocs(q);
-
-        let enterCount = 0;
-        let exitCount = 0;
-
-        snapshot.forEach(doc => {
-          const data = doc.data();
-          if (data.type === "enter") enterCount++;
-          if (data.type === "exit") exitCount++;
-        });
-
-        if (enterCount > exitCount) {
-          // すでに入店済み（退店していない） → already-enter.html に遷移
-          window.location.href = "already-enter.html";
-          return;
-        }
-
-        // ✅ 入店記録を保存
-        await addDoc(logsRef, {
-          type: "enter",
-          table,
-          timestamp,
-          device
-        });
-
-        console.log("✅ 入店記録完了");
-
-      } catch (error) {
-        console.error("❌ Firebase記録エラー:", error);
-      }
-    });
-  </script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
   <style>
-    /* （CSSはそのまま、前回送っていただいた完成版と同じ） */
     body {
       margin: 0;
       padding: 0;
@@ -216,26 +158,74 @@
 
   <!-- アニメーション制御 -->
   <script>
-    $(document).ready(function () {
-      setTimeout(() => {
-        $('#loadingLabel').text("Completion!");
-      }, 3100);
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-      setTimeout(() => {
-        $('#loadingWrapper').fadeOut(400);
-      }, 3600);
+    async function processEntry() {
+      const params = new URLSearchParams(location.search);
+      const table = params.get("table");
+      const token = params.get("token");
+      if (!token || !table) return location.href = "error.html";
 
-      setTimeout(() => {
-        $('#welcomeImg').fadeIn(600);
-        $('#welcomeText').fadeIn(600);
-      }, 4200);
+      try {
+        const docRef = db.collection("qr_tokens").doc(token);
+        const doc = await docRef.get();
+        if (!doc.exists) return location.href = "error.html";
 
-      setTimeout(() => {
-        $('#loader03').fadeOut(600, function () {
-          $('#main-content').fadeIn(600);
-        });
-      }, 6000);
-    });
+        const data = doc.data();
+        const now = new Date();
+        const expires = new Date(data.expiresAt);
+
+        if (data.used) {
+          location.href = "already-enter.html";
+        } else if (expires < now || data.table !== table) {
+          location.href = "expired2.html";
+        } else {
+          await docRef.update({ used: true });
+          await db.collection("logs").add({
+            table: table,
+            type: "enter",
+            device: navigator.userAgent,
+            timestamp: new Date().toISOString()
+          });
+
+          // ローディング表示開始
+          $(document).ready(function () {
+            setTimeout(() => {
+              $('#loadingLabel').text("Completion!");
+            }, 3100);
+
+            setTimeout(() => {
+              $('#loadingWrapper').fadeOut(400);
+            }, 3600);
+
+            setTimeout(() => {
+              $('#welcomeImg').fadeIn(600);
+              $('#welcomeText').fadeIn(600);
+            }, 4200);
+
+            setTimeout(() => {
+              $('#loader03').fadeOut(600, function () {
+                $('#main-content').fadeIn(600);
+              });
+            }, 6000);
+          });
+        }
+      } catch (e) {
+        console.error("Error processing QR:", e);
+        location.href = "error.html";
+      }
+    }
+
+    window.onload = processEntry;
   </script>
 
 </body>
