--- a/app/system/admin.html
+++ b/app/system/admin.html
@@ -145,7 +145,7 @@
     <div class="header-bar">
       <div class="header-title">　　　　　店内管理システム</div>
       <div class="header-links">
-        <a href="#">マニュアル</a><a href="#">ログアウト</a>
+        <a href="index">ログアウト</a>
       </div>
     </div>
     <div class="drawer">
