--- a/app/system/dashboard.html
+++ b/app/system/dashboard.html
@@ -260,8 +260,7 @@
     <div class="header-bar">
       <div class="header-title">　　　　　店内管理システム</div>
       <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="start.html">ログアウト</a>
+        <a href="index.html">ログアウト</a>
       </div>
     </div>
     <div class="drawer">
