--- a/app/system/histogram.html
+++ b/app/system/histogram.html
@@ -191,8 +191,7 @@
     <div class="header-bar">
       <div class="header-title">　　　　　店内管理システム</div>
       <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
+        <a href="index.html">ログアウト</a>
       </div>
     </div>
     <div class="drawer">
