--- a/app/system/index.html
+++ b/app/system/index.html
@@ -110,7 +110,7 @@
     <section class="section">
       <img src="picture.png" alt="タイトル" class="fade-up" />
       <div class="button-wrapper fade-up">
-        <a href="index.html" class="btn-start">▶ 使ってみる</a>
+        <a href="dashboard.html" class="btn-start">▶ 使ってみる</a>
       </div>
     </section>
 
@@ -145,7 +145,7 @@
     </section>
 
      <div class="button-wrapper fade-up">
-        <a href="index.html" class="btn-start">▶ 使ってみる</a>
+        <a href="dashboard.html" class="btn-start">▶ 使ってみる</a>
       </div>
   </div>
 
