--- a/wait.html
+++ b/wait.html
@@ -118,7 +118,7 @@
   </div>
 
   <div style="margin-top: 60px; padding: 20px 0; border-top: 2px solid #2c3e50; font-size: 18px;">
-    <a href="map.html" style="text-decoration: underline; color: #2c3e50;">
+    <a href="/app/system/map.html" style="text-decoration: underline; color: #2c3e50;">
       店内マップ / Store Map
     </a>
   </div>
