--- a/practice.html
+++ b/practice.html
@@ -174,32 +174,34 @@
     function countVisitors(snapshot) {
       updateTableDisplays();
     }
-        async function generateQR() {
-      const table = document.getElementById("tableNum").value;
-      if (!table || isNaN(table)) {
-        alert("テーブル番号を入力してください");
-        return;
-      }
 
-      const token = crypto.randomUUID();
-      const expiresAt = new Date(Date.now() + 2 * 60 * 1000); // 2分後
+    async function generateQR() {
+  const table = document.getElementById("tableNum").value;
+  if (!table || isNaN(table)) {
+    alert("テーブル番号を入力してください");
+    return;
+  }
 
-      await db.collection("qr_tokens").doc(token).set({
-        table: table,
-        token: token,
-        expiresAt: expiresAt.toISOString(),
-        used: false
-      });
+  const token = crypto.randomUUID();
+  const expiresAt = new Date(Date.now() + 2 * 60 * 1000); // 2分後
 
-      const url = https://qr-webpage.vercel.app/app/register/enter.html?table=${table}&token=${token};
-      document.getElementById("tableLabel").textContent = テーブル番号：${table};
-      QRCode.toCanvas(document.getElementById("qrcode"), url, function (error) {
-        if (error) {
-          console.error(error);
-          alert("QRコード生成に失敗しました");
-        }
-      });
+  await db.collection("qr_tokens").doc(token).set({
+    table: table,
+    token: token,
+    expiresAt: expiresAt.toISOString(),
+    used: false
+  });
+
+  const url = `https://qr-webpage.vercel.app/app/register/enter.html?table=${table}&token=${token}`;
+  document.getElementById("tableLabel").textContent = `テーブル番号：${table}`;
+  QRCode.toCanvas(document.getElementById("qrcode"), url, function (error) {
+    if (error) {
+      console.error(error);
+      alert("QRコード生成に失敗しました");
     }
+  });
+}
+
 
     window.onload = () => {
       db.collection("logs").onSnapshot(countVisitors);
