--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -188,6 +188,10 @@
 
   <main>
 
+    <h2>店内マップ</h2>
+    <iframe src="map2.html" width="850" height="650" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+    <iframe src="waitQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+
     
   </main>
 
