--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -120,6 +120,12 @@
       margin: 0 auto;
       padding: 30px 20px;
     }
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
 
 
   </style>
