--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -126,6 +126,9 @@
       border-bottom: 2px solid #2c3e50;
       padding-bottom: 5px;
     }
+    h1 {
+      text-align: center;
+    }
 
   </style>
 
