--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -187,7 +187,8 @@
     </div>
   </header>
 
-  <main>
+    <section style="padding: 20px;">
+
 
     <h2>店内マップ</h2>
     <h1>
@@ -196,7 +197,7 @@
     </h1>
 
     
-  </main>
+  </section>
 
 </body>
 </html>
