--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -134,8 +134,7 @@
     </div>
   </header>
 
-    <section style="padding: 20px;">
-
+<main>
 
     <h2>店内マップ</h2>
     <h1>
@@ -143,7 +142,9 @@
     <iframe src="/QR/waitQR.png" width="300" height="300" style="border: 2px solid #444; border-radius: 8px;"></iframe>
     </h1>
 
-    
+</main>
+      <section style="padding: 20px;">
+
   </section>
 
 </body>
