--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -35,6 +35,8 @@
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
+      align-items: center;
+
     }
 
     .header-links {
@@ -120,7 +122,7 @@
       <span></span>
     </div>
     <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-title">店内表示</div>
   </header>
 
 <main>
