--- a/app/wait/display.html
+++ b/app/wait/display.html
@@ -27,7 +27,7 @@
 
     .header-bar {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       padding: 12px 20px;
     }
